@@ -1,10 +1,0 @@
-views.argument.search_api_term:
-  type: views.argument.search_api
-  label: 'Search API taxonomy term'
-
-views.filter.search_api_term:
-  type: views.filter.taxonomy_index_tid
-  label: 'Search API taxonomy term'
-
-views.filter_value.search_api_term:
-  type: string
