@@ -1,8 +1,9 @@
 type: module
 name: 'Search API Taxonomy Term Handlers'
-description: 'Enables the use of Search API indexed taxonomy terms as filters or arguments in Search API supported Views.'
+description: 'Deprecated. You should uninstall this module.'
 package: Search
 core: 8.x
+hidden: true
 configure: search_api.overview
 dependencies:
   - drupal:system (>=8.1)
