@@ -1,17 +1,22 @@
 <?php
 
-namespace Drupal\search_api_views_taxonomy\Plugin\views\argument;
+namespace Drupal\search_api\Plugin\views\argument;
 
 use Drupal\Component\Utility\Html;
-use Drupal\search_api\Plugin\views\argument\SearchApiStandard;
 use Drupal\taxonomy\Entity\Term;
 
 /**
  * Defines a contextual filter searching through all indexed taxonomy fields.
  *
+ * Note: The plugin annotation below is not misspelled. Due to dependency
+ * problems, the plugin is not defined here but in
+ * search_api_views_plugins_argument_alter().
+ *
  * @ingroup views_argument_handlers
  *
- * @ViewsArgument("search_api_term")
+ * ViewsArgument("search_api_term")
+ *
+ * @see search_api_views_plugins_argument_alter()
  */
 class SearchApiTerm extends SearchApiStandard {
 
